try dvh on background height to resolve gap on IOS

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -2,7 +2,7 @@
   top: 0;
   left: -12%;
   width: 125vw;
-  height: 100lvh;
+  height: 100dvh;
   z-index: -1;
   position: fixed;
   background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.3)),
